welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	def marqueSol() {
		baisseBrosse();
		leveBrosse();
	}
def faireV() {
	marqueSol();
	gauche();
	avance();
	droite();
	avance();
	marqueSol();
	avance();
	droite();
	avance();
	gauche();
	avance();
	gauche();
	avance(); //placé pour le V suivant
}
def faireMotif()  {
	for (r <- 1 to 4) {
		setCouleurBrosse(color.Yellow);
		faireV();
	}
}
}
